[package]
name = "shader_conditional_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.4", features = ["derive"] }
logos = "0.13.0"
walkdir = "2.4.0"
winnow = "0.5.15"

[profile.release]
lto = "thin"
