[package]
name = "wgsl_drill"
version = "1.0.0"
authors = ["Nicola Papale"]
license = "MPL-2.0"
repository = "https://github.com/nicopap/wgsl_drill"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.4", features = ["derive"] }
walkdir = "2.4.0"
winnow = "0.5.15"

[profile.release]
lto = "thin"
